tests/tooling/fixtures/native/recovery/negative/negative_undefined_symbol.objc3
// Negative fixture: undefined symbol.
// Expected diagnostic code(s): O3S203.
module NegativeUndefinedSymbol;

fn main() {
  return missing_symbol();
}
